maybe fix fonts on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 }
 
 .container {
@@ -36,7 +36,7 @@ header {
   /* display: inline-block; */
   transition: background-color 0.3s;
   background-color: azure;
-  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 }
 
 nav {
@@ -62,7 +62,7 @@ nav {
   display: inline-block;
   transition: background-color 0.3s;
   background-color: azure;
-  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 }
 
 .nav-links li a:hover {
